2007-02-09  Masayuki Ataka  <masayuki.ataka@gmail.com>

	* tex-jp.el (TeX-japanese-process-input-coding-system)
	(TeX-japanese-process-output-coding-system): Do not use
	default-coding-system to set process-coding-system, anymore.  The
	value is set to shift_jis or euc-jp depending on window-system.

	* tex-bar.el: Fix typo.  Reported by Ikumi Keita
	<ikumi@ikumi.que.jp>.

2007-02-09  Ikumi Keita	<ikumi@ikumi.que.jp>

	* tex-jp.el (japanese-TeX-command-list): Add
	`TeX-run-discard-foreground' and `TeX-run-function' for
	function-item.
	(japanese-TeX-set-process-coding-system): New function.
	(TeX-after-start-process-function): Use it.  Cater for the
	accidental case that no-Japanese loads tex-jp.el and his
	coding-system is set to unexpected one.

2007-02-05  Ralf Angeli  <angeli@caeruleus.net>

	* tex.el (TeX-submit-bug-report): Remove unnecessary code.
	Include a plea for upgrading into introductory blurb.

2007-02-01  Ikumi Keita	<ikumi@ikumi.que.jp>

	* latex.el: Move (provide 'latex) to the end of buffer.
	(TeX-global-input-files, BibTeX-global-style-files)
	(BibTeX-global-files): checkdoc cleaning.
	(LaTeX-fill-paragraph, LaTeX-fill-code-comment): Use function
	TeX-match-buffer instead of buffer-substring-*.
	(LaTeX-209-to-2e): Likewise.

	* tex-buf.el (TeX-command-region, TeX-command-buffer)
	(TeX-next-error, TeX-check-files, TeX-command-next)
	(TeX-output-extension, TeX-run-set-command, TeX-run-interactive)
	(TeX-sentinel-default-function, TeX-region-create, TeX-region)
	(TeX-error-file, TeX-error-offset, TeX-parse-TeX)
	(TeX-error-description-list): checkdoc cleaning.
	(TeX-run-command, TeX-TeX-sentinel-check, TeX-BibTeX-sentinel):
	Use substitute-command-keys to message key binding.
	(TeX-current-pages): Add doc string.

	* tex.el (TeX-print-command, TeX-queue-command)
	(TeX-command-list, TeX-printer-list, TeX-set-mode-name)
	(TeX-regexp-group-count): checkdoc cleaning.
	(plain-TeX-mode-hook): Declare user option explicitly using
	defcustom.